# prism

./: .dockerignore  .editorconfig  .env.example  .gitignore  API.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  SECURITY.md  WIRE_BENCHMARK_OOM_ANALYSIS.md  clippy.toml  config.toml  dump.rdb  index.html  justfile  onboarding.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml  wire_benchmark_code_analysis.md  wire_benchmark_memory_analysis.md
ast_parser/: Cargo.toml
ast_parser/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: account_ext.rs  api.rs  builder.rs  config.rs  error.rs  lib.rs  mock.rs  noop.rs  tests.rs  types.rs  webserver.rs
crates/benches/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cfg.rs  cli_args.rs  config.rs  error.rs  file_utils.rs  lib.rs  main.rs  network.rs  node_types.rs
crates/cli/src/apply_args/: commands.rs  da.rs  database.rs  mod.rs  traits.rs  webserver.rs
crates/cli/src/cli_args/: commands.rs  da.rs  database.rs  mod.rs  webserver.rs
crates/cli/src/settings/: cli.rs  mod.rs  models.rs  settings.rs  sources.rs  tests.rs  validation.rs
crates/cli/src/tests/: mod.rs
crates/client/: Cargo.toml
crates/client/src/: http_client.rs  http_prism_api.rs  lib.rs  prism_api.rs  prism_client.rs  rest_client.rs  timer.rs
crates/common/: Cargo.toml
crates/common/src/: account.rs  builder.rs  digest.rs  errors.rs  hashchain.rs  hashchain_storage.rs  hasher.rs  keys.rs  lib.rs  operation.rs  request.rs  serialization.rs  signed_content.rs  signedcontent.rs  test_ops.rs  test_transaction_builder.rs  test_utils.rs  tests.rs  transaction.rs  transaction_builder.rs  tree.rs
crates/common/src/api/: builder.rs  mock.rs  mod.rs  noop.rs  types.rs
crates/common/src/keys/: signatures.rs  signing_keys.rs  verifying_keys.rs
crates/common/src/tree/: key_directory_tree.rs  mod.rs  proofs.rs  snarkable_tree.rs
crates/crosstarget/: Cargo.toml
crates/crosstarget/src/: lib.rs  tasks.rs  time.rs  token.rs  tracing.rs
crates/da/: Cargo.toml
crates/da/src/: celestia.rs  config.rs  consts.rs  da.rs  error.rs  events.rs  factory.rs  lib.rs  memory.rs  utils.rs
crates/da/src/aws/: client.rs  config.rs  full_node.rs  light_client.rs  mod.rs
crates/da/src/celestia/: full_node.rs  light_client.rs  mod.rs  utils.rs
crates/errors/: Cargo.toml
crates/errors/src/: errors.rs  lib.rs
crates/events/: Cargo.toml
crates/events/src/: channel.rs  event.rs  lib.rs
crates/groth16/: Cargo.toml
crates/groth16/src/: hashchain.rs  lib.rs  merkle_batch.rs  merkle_insertion.rs  merkle_update.rs  utils.rs
crates/keys/: Cargo.toml
crates/keys/src/: algorithm.rs  cosmos.rs  der.rs  errors.rs  lib.rs  payload.rs  signatures.rs  signing_keys.rs  tests.rs  verifying_keys.rs
crates/keys/src/tests/: mod.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  lightclient.rs  node.rs  sequencer.rs  test.rs
crates/node_types/lightclient/: Cargo.toml
crates/node_types/lightclient/src/: events.rs  factory.rs  lib.rs  lightclient.rs  syncer.rs  wasm.rs
crates/node_types/lightclient/src/tests/: mod.rs
crates/node_types/lightclient/wasm/: Cargo.toml
crates/node_types/lightclient/wasm/js/: index.js  vite.config.ts  worker.js
crates/node_types/lightclient/wasm/js/src/: App.tsx  index.css
crates/node_types/lightclient/wasm/js/src/components/: OperationSubmitter.tsx
crates/node_types/lightclient/wasm/src/: client.rs  commands.rs  error.rs  worker.rs  worker_communication.rs
crates/node_types/lightclient/wasm/src/celestia/: client.rs  config.rs  mod.rs  types.rs
crates/node_types/prover/: Cargo.toml
crates/node_types/prover/src/: api.rs  factory.rs  lib.rs  prover.rs  prover_engine.rs  sequencer.rs  syncer.rs  tests.rs  tx_buffer.rs  webserver.rs
crates/node_types/prover/src/prover/: mod.rs  tests.rs  timer.rs
crates/node_types/prover/src/prover/tests/: mod.rs
crates/node_types/prover/src/prover_engine/: engine.rs  mod.rs  sp1_prover.rs
crates/node_types/uniffi-lightclient/: .gitignore  Cargo.toml  build-ios.sh
crates/node_types/uniffi-lightclient/src/: config.rs  error.rs  lib.rs  types.rs
crates/node_types/wasm-lightclient/: .npmignore  Cargo.toml  index.html  package.json
crates/node_types/wasm-lightclient/example/: index.html  index.js  worker.js
crates/node_types/wasm-lightclient/src/: client.rs  commands.rs  config.rs  error.rs  lib.rs  test.rs  worker.rs  worker_communication.rs
crates/node_types/wasm-lightclient/src/celestia/: client.rs  config.rs  mod.rs  types.rs
crates/node_types/wasm-lightclient/src/tests/: mod.rs
crates/nova/: Cargo.toml
crates/nova/src/: batch.rs  insert.rs  update.rs  utils.rs
crates/presets/: Cargo.toml
crates/presets/src/: lib.rs
crates/prism/: Cargo.toml
crates/prism/src/: cfg.rs  error.rs  lib.rs  main.rs  node_types.rs  storage.rs  utils.rs  webserver.rs
crates/prism/src/da/: celestia.rs  memory.rs  mod.rs
crates/prism/src/node_types/: lightclient.rs  mod.rs  sequencer.rs
crates/prism/tests/: integration_tests.rs
crates/serde/: Cargo.toml
crates/serde/src/: base64.rs  bech32.rs  binary.rs  hex.rs  lib.rs
crates/sp1/: Cargo.toml  README.md
crates/sp1/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  database.rs  errors.rs  factory.rs  inmemory.rs  lib.rs  redis.rs  redis_db.rs  rocksdb.rs  sled.rs  storage.rs  utils.rs
crates/storage/src/tests/: mod.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  error.rs  factory.rs  init.rs  lib.rs  logs.rs  metrics.rs  metrics_registry.rs  telemetry.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tree/: Cargo.toml
crates/tree/benches/: database_comparison.rs
crates/tree/src/: hasher.rs  key_directory_tree.rs  lib.rs  proofs.rs  snarkable_tree.rs  tests.rs
crates/tree/src/tests/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  types.rs
crates/zk_snark/: Cargo.toml
crates/zk_snark/src/: lib.rs  utils.rs  zk_snark.rs
guest/: Cargo.toml
guest/src/: lib.rs
(+190 files in other folders)
