[package]
name = "ast_parser"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "ast_parser"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
proc-macro2 = "1.0"
