[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
heapless = "0.8.0"
jolt = { package = "jolt-sdk", git = "https://github.com/deltadevsde/jolt"}
indexed-merkle-tree =  { git = "https://github.com/deltadevsde/indexed-merkle-tree", rev = "35c2ea3efdd4e47992925bebb8065c166518f0ae", default-features = false }
sha2 = "0.10.8"
