[package]
name = "prism-api"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# async sleep
tokio.workspace = true

# prism
prism-common.workspace = true
prism-keys.workspace = true

# serde
serde.workspace = true

# OAS spec
utoipa.workspace = true

[features]
default = []
test_utils = []
