[package]
name = "prism-api"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
mockall = ["dep:mockall"]

[dependencies]
# prism
prism-common.workspace = true
prism-errors.workspace = true
prism-keys.workspace = true

# async
async-trait.workspace = true

# serde
serde.workspace = true

# OAS spec
utoipa.workspace = true

# misc
anyhow.workspace = true

# testing
mockall = { workspace = true, optional = true }

[lints]
workspace = true
