[package]
name = "prism-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "prism-cli"
path = "src/main.rs"

[features]
default = []
groth16 = []
test_utils = []
mock_prover = []

[dependencies]
lumina-node = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
keystore-rs = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
prism-storage = { workspace = true }
prism-errors = { workspace = true }
sp1-sdk = { workspace = true }
prism-prover = { workspace = true }
prism-lightclient = { workspace = true }
prism-da = { workspace = true }
prism-keys = { workspace = true }
prism-serde = { workspace = true }
celestia-types = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
envy = "0.4.2"

[dev-dependencies]
tempfile = { workspace = true }
