[package]
name = "prism-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "prism-cli"
path = "src/main.rs"

[features]
default = []
test_utils = []


[dependencies]
lumina-node = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
keystore-rs = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
prism-storage = { workspace = true }
prism-errors = { workspace = true }
prism-prover = { workspace = true }
prism-lightclient = { workspace = true }
prism-da = { workspace = true }
prism-keys = { workspace = true }
prism-serde = { workspace = true }
celestia-types = { workspace = true }
prism-telemetry-registry = { workspace = true }
prism-telemetry = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
