[package]
name = "prism-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "prism-cli"
path = "src/main.rs"

[features]
default = []
test_utils = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
prism-storage = { workspace = true }
prism-errors = { workspace = true }
prism-events = { workspace = true }
prism-prover = { workspace = true }
prism-lightclient = { workspace = true }
prism-da = { workspace = true }
prism-telemetry-registry = { workspace = true }
prism-telemetry = { workspace = true }
prism-presets = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
