[package]
name = "prism-client"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# prism
prism-api.workspace = true
prism-common.workspace = true
prism-keys.workspace = true

# webclient
reqwest.workspace = true
url.workspace = true

# serde
serde.workspace = true

# misc
anyhow.workspace = true

[features]
default = []
test_utils = []
