[package]
name = "prism-client"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# prism
prism-common.workspace = true
prism-keys.workspace = true
prism-serde.workspace = true

# webclient
reqwest.workspace = true
url.workspace = true

# async
async-trait.workspace = true
tokio.workspace = true

# serde
serde.workspace = true

# misc
anyhow.workspace = true

[features]
default = []
mockall = ["prism-common/mockall"]
