[package]
name = "prism-common"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# prism
prism-keys.workspace = true

# serde
prism-serde.workspace = true
serde.workspace = true

# celestia
celestia-types.workspace = true

# digest
sha2.workspace = true

# misc
anyhow.workspace = true
rand.workspace = true

[features]
default = []
test_utils = []
