[package]
name = "prism-cross-target"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[features]
default = []
tasks = ["token", "dep:tokio-util", "dep:tokio", "tokio/rt", "dep:wasm-bindgen-futures", "dep:send_wrapper"]
token = ["dep:tokio-util", "time"]
time = ["dep:gloo-timers", "dep:tokio", "tokio/time", "dep:send_wrapper", "dep:futures", "dep:pin-project", "dep:web-time"]

[dependencies]
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
send_wrapper = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# futures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
