[package]
name = "prism-da"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[features]
default = []

[dependencies]
blockstore = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
redb = { workspace = true }
lumina-node = { workspace = true }
prism-serde = { workspace = true }
sp1-verifier = { workspace = true }
celestia-types = { workspace = true }
prism-keys = { workspace = true }
prism-common = { workspace = true }
prism-events = { workspace = true }
prism-presets = { workspace = true }
mockall = { workspace = true }
bincode = { workspace = true }
libp2p = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { workspace = true }
celestia-rpc = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
blockstore = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, default-features = false, features = [
  "sync",
  "time",
] }

[lints]
workspace = true
