[package]
name = "prism-events"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
web-time = { workspace = true, features = ["serde"] }
prism-common = { workspace = true }
prism-cross-target = { workspace = true }
lumina-node = { workspace = true }
