[package]
name = "prism-events"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
web-time = { workspace = true, features = ["serde"] }
lumina-node = { workspace = true }

[lints]
workspace = true
