[package]
name = "prism-events"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
testing = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
web-time = { workspace = true, features = ["serde"] }
lumina-node = { workspace = true }
prism-cross-target = { workspace = true, features = ["time"] }

[lints]
workspace = true
