[package]
name = "prism-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# serde
prism-serde.workspace = true
serde.workspace = true

# curves
ed25519-consensus.workspace = true
secp256k1.workspace = true
p256.workspace = true
ecdsa.workspace = true             # needed transitively to enable der feature

# misc
anyhow.workspace = true
sha2.workspace = true
rand.workspace = true

[features]
default = []
test_utils = []
secp256k1 = ["secp256k1/global-context", "secp256k1/rand-std"]
