[package]
name = "prism-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# serde
prism-serde.workspace = true
serde.workspace = true

# OAS spec
utoipa.workspace = true

# curves
ed25519-consensus.workspace = true
p256.workspace = true
ecdsa.workspace = true             # needed transitively to enable der feature

# misc
anyhow.workspace = true
sha2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
rand = { version = "0.8.5", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.8.5", features = ["std", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
test_utils = []
secp256k1 = ["secp256k1/global-context", "secp256k1/rand-std"]
