[package]
name = "prism-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# serde
pkcs8.workspace = true
prism-serde.workspace = true
serde.workspace = true
serde_json.workspace = true

# OAS spec
utoipa.workspace = true

# curves
ed25519.workspace = true
ed25519-consensus.workspace = true
k256.workspace = true
p256.workspace = true

# signatures
alloy-primitives.workspace = true
ripemd.workspace = true

# misc
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8.5", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.8.5", features = ["std", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
test_utils = []
