[package]
name = "prism-nova"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519 = { workspace = true }
base64 = { workspace = true }
num = { workspace = true }
bls12_381 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
ff = { workspace = true }
thiserror = { workspace = true }
indexed-merkle-tree = { workspace = true }
celestia-types = { workspace = true }
anyhow = { workspace = true }
jmt = { workspace = true, path = "../jmt", features = ["mocks"] }
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
arecibo = { workspace = true, git = "https://github.com/deltadevsde/arecibo" }
itertools = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
prism-common = { workspace = true }

[patch.crates-io]
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.8" }
sha2-v0-10-6 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.6" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
