[package]
name = "prism-presets"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# serde
prism-serde.workspace = true
serde.workspace = true
serde_json.workspace = true

# misc
thiserror.workspace = true

[features]
default = []
test_utils = []
